--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,16 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
 
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.8.3"
 }
 
 kapt {
