--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.8.3"
+
+    implementation "androidx.navigation:navigation-compose:2.7.7"
+    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
 }
 
 kapt {
